# CSNE

./: LICENSE  README.md  requirements.txt  setup.cfg
csne/: csne.py  main.py  maxent_comb.py  weighted_lin_constr.py
experiments/: conf_hyperparams.ini  conf_sign.ini
src/csne/: __init__.py  csne.py  main.py  maxent_comb.py  weighted_lin_constr.py
