##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = csne
version = 0.0.1
description = Conditional Signed Network Embedding
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    networkx
    numpy
    scikit-learn
    scipy
    pandas
    sklearn
    tqdm

zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src


[options.entry_points]
console_scripts =
    csne = csne.main:main
